created header, navigation & link, logo. Also added colors to variables and added list decoration:none to main scss

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,11 @@
 // Colors
 $c-white: #fff;
-
+$c-light-pink: #f2505d;
+$c-red: #f20707;
+$c-light-red: #f25252;
+$c-light-grey: #404040;
+$c-darker-grey: #262626;
+$c-black: #000;
 // Fonts
 $f-helvetica: "", sans-serif;
 $f-avenir: "", sans-serif;
