new branch with added fonts

--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,6 +1,12 @@
 @font-face {
-  font-family: "";
-  src: url("") format("woff2"), url("") format("woff");
-  font-weight: normal;
+  font-family: "sen-bold";
+  src: url("../assets/fonts/sen-bold/Sen-Bold.woff2") format("woff2"), url("../assets/fonts/sen-bold/Sen-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: "sen-regular";
+  src: url("../assets/fonts/sen-regular/Sen-Regular.woff2") format("woff2"), url("../assets/fonts/sen-regular/Sen-Regular.woff") format("woff");
+  font-weight: 400;
   font-style: normal;
 }
