--- a/src/_extends/common.pug
+++ b/src/_extends/common.pug
@@ -12,7 +12,7 @@ html(lang='en')
 		block title
 			title Group project
 	body
-		//- include ../../assets/icons/common/symbol-defs.svg
+		include ../../assets/icon/common/symbol-defs.svg
 		.l-common
 			block content
 		script(src="./index.js") 
