--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -8,12 +8,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
   }
   &__item{
    min-width: 70px;
    height: 40px;
    text-align: center;
+   padding-left: 10px;
 
    
   
