--- a/index.css
+++ b/index.css
@@ -112,7 +112,7 @@ svg {
 
 .e-link--lighter-text {
   color: white;
-  padding: 10px;
+  padding: 11px;
 }
 
 .e-link--lighter-text:hover {
@@ -184,11 +184,11 @@ svg {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 10px;
 }
 
 .c-navigation__item {
   min-width: 70px;
   height: 40px;
   text-align: center;
+  padding-left: 10px;
 }
