--- a/index.css
+++ b/index.css
@@ -1,13 +1,13 @@
 @font-face {
   font-family: "sen-bold";
-  src: url("../assets/fonts/sen-bold/Sen-Bold.woff2") format("woff2"), url("../assets/fonts/sen-bold/Sen-Bold.woff") format("woff");
+  src: url("../assets/fonts/sen/Sen-Bold.woff2") format("woff2"), url("../assets/fonts/sen/Sen-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "sen-regular";
-  src: url("../assets/fonts/sen-regular/Sen-Regular.woff2") format("woff2"), url("../assets/fonts/sen-regular/Sen-Regular.woff") format("woff");
+  src: url("../assets/fonts/sen/Sen-Regular.woff2") format("woff2"), url("../assets/fonts/sen/Sen-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
@@ -101,6 +101,12 @@ svg {
   width: 75px;
   height: 75px;
   display: block;
+  -webkit-animation: rotate 20s infinite linear;
+          animation: rotate 20s infinite linear;
+}
+
+.e-logo > svg {
+  display: block;
 }
 
 .e-logo__text {
@@ -109,6 +115,33 @@ svg {
 
 .e-logo--white {
   fill: #fff;
+}
+
+@-webkit-keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+.icon {
+  height: 100%;
+  width: 100%;
 }
 
 .e-link {
