--- a/src/_includes/elements/logo.pug
+++ b/src/_includes/elements/logo.pug
@@ -6,7 +6,7 @@ mixin logo(args)
 
       a(href=logoLink class=logoClass)
         svg(class="icon-" + svgName)
-          use(xlink:href="../../../assets/icon/logo/logo.svg#" + svgName)
+          use(xlink:href="#icon-logo")
 
       a(href=logoLink class=logoText)
         span Beetrooters 
