--- a/index.css
+++ b/index.css
@@ -1,20 +1,17 @@
 @font-face {
   font-family: "sen-bold";
-  src: url("../assets/fonts/sen-bold/Sen-Bold.woff2") format("woff2"), url("../assets/fonts/sen-bold/Sen-Bold.woff") format("woff");
+  src: url("../assets/fonts/sen/Sen-Bold.woff2") format("woff2"), url("../assets/fonts/sen/Sen-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
 }
-
 @font-face {
   font-family: "sen-regular";
-  src: url("../assets/fonts/sen-regular/Sen-Regular.woff2") format("woff2"), url("../assets/fonts/sen-regular/Sen-Regular.woff") format("woff");
+  src: url("../assets/fonts/sen/Sen-Regular.woff2") format("woff2"), url("../assets/fonts/sen/Sen-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
-
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
@@ -44,7 +41,6 @@ body {
   stroke: currentColor;
   fill: currentColor;
 }
-
 .icon:not(.has-stroke) {
   stroke-width: 0;
 }
@@ -69,15 +65,14 @@ body {
 }
 
 *::-webkit-scrollbar-thumb {
-  -webkit-box-shadow: inset 0 0 3px rgba(255, 255, 255, 0.8);
-          box-shadow: inset 0 0 3px rgba(255, 255, 255, 0.8);
+  box-shadow: inset 0 0 3px rgba(255, 255, 255, 0.8);
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 10px;
   outline: none;
 }
 
 .wrapper {
-  max-width: 1100px;
+  max-width: 1200px;
   padding: 0 50px;
   margin: 0 auto;
   width: 100%;
@@ -102,11 +97,9 @@ svg {
   height: 75px;
   display: block;
 }
-
 .e-logo__text {
   color: #fff;
 }
-
 .e-logo--white {
   fill: #fff;
 }
@@ -116,15 +109,39 @@ svg {
   height: 100%;
   display: block;
 }
-
 .e-link--lighter-text {
   color: white;
   padding: 10px;
 }
-
 .e-link--lighter-text:hover {
   border-radius: 5px;
   background-color: #000;
+}
+
+.e-button {
+  background-color: transparent;
+  border: 1px solid #fff;
+  margin-bottom: 115px;
+  border-radius: 5px;
+  padding: 5px 25px;
+  cursor: pointer;
+  outline: none;
+}
+.e-button:hover {
+  background-color: #f2505d;
+}
+
+.e-social-link {
+  width: 35px;
+  height: 35px;
+  margin: 25px 10px;
+  color: #fff;
+}
+.e-social-link__link {
+  font-size: 30px;
+}
+.e-social-link:hover {
+  color: #f2505d;
 }
 
 .c-header {
@@ -136,41 +153,40 @@ svg {
   height: 100px;
   background-color: #f25252;
 }
-
 .c-header__wrapper {
   height: 100%;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   max-width: 1200px;
   margin: 0 auto;
 }
-
 .c-header__logo {
   height: 75px;
   width: 150px;
   display: block;
 }
-
 .c-header__logo__wrapper {
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.c-footer {
+  min-height: 200px;
+  background-color: #222222;
+}
+.c-footer__wrapper {
+  max-width: 1300px;
+  padding: 0 50px;
+  margin: 0 auto;
+  width: 100%;
+}
+.c-footer__top {
+  padding-top: 25px;
 }
 
 .c-navigation {
@@ -178,24 +194,44 @@ svg {
   max-width: 1200px;
   height: 50px;
 }
-
 .c-navigation__wrapper {
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   gap: 10px;
 }
-
 .c-navigation__item {
   min-width: 70px;
   height: 40px;
   text-align: center;
+}
+
+.c-banner {
+  background-image: url("./assets/images/banner1.jpg");
+  background-size: cover;
+  background-position: center center;
+  margin-top: 100px;
+}
+.c-banner__wrapper {
+  max-width: 1300px;
+  padding: 0 50px;
+  margin: 0 auto;
+  width: 100%;
+}
+.c-banner__block {
+  width: 35%;
+}
+.c-banner__main-title {
+  font-family: "sen-bold";
+  font-size: 62px;
+  line-height: 1.3;
+  margin: 150px 0 20px;
+}
+.c-banner__sub-title {
+  font-family: "sen-regular";
+  font-size: 18px;
+  line-height: 1.5;
+  margin-bottom: 30px;
 }
