--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -14,6 +14,13 @@
   background-position: center center;
 }
 
+@mixin containerGlobal {
+  max-width: 1300px;
+  padding: 0 50px;
+  margin: 0 auto;
+  width: 100%;
+}
+
 @function em($px) {
   @return $px / $fs-base + em;
 }
