--- a/src/_extends/common.pug
+++ b/src/_extends/common.pug
@@ -6,6 +6,11 @@ html(lang='en')
 	head
 		meta(charset='utf-8')
 		meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
+		//- bootstrap
+		link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous")
+		//- fontawesome
+		link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous")
+		//- main style
 		link(rel='stylesheet' href='index.css')
 		link(rel="shortcut icon" href="" type="image/x-icon")
 		block style
@@ -15,4 +20,9 @@ html(lang='en')
 		//- include ../../assets/icons/common/symbol-defs.svg
 		.l-common
 			block content
-		script(src="./index.js") 
+				//- main js
+				script(src="./index.js")
+				//- ionicons
+				script(type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js")
+				script(nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js")
+				
