create section establishment and scss file

--- a/index.css
+++ b/index.css
@@ -4,17 +4,14 @@
   font-weight: 700;
   font-style: normal;
 }
-
 @font-face {
   font-family: "sen-regular";
   src: url("../assets/fonts/sen/Sen-Regular.woff2") format("woff2"), url("../assets/fonts/sen/Sen-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
-
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
@@ -44,7 +41,6 @@ body {
   stroke: currentColor;
   fill: currentColor;
 }
-
 .icon:not(.has-stroke) {
   stroke-width: 0;
 }
@@ -69,8 +65,7 @@ body {
 }
 
 *::-webkit-scrollbar-thumb {
-  -webkit-box-shadow: inset 0 0 3px rgba(255, 255, 255, 0.8);
-          box-shadow: inset 0 0 3px rgba(255, 255, 255, 0.8);
+  box-shadow: inset 0 0 3px rgba(255, 255, 255, 0.8);
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 10px;
   outline: none;
@@ -104,41 +99,33 @@ svg {
   -webkit-animation: rotate 20s infinite linear;
           animation: rotate 20s infinite linear;
 }
-
 .e-logo > svg {
   display: block;
 }
-
 .e-logo__text {
   color: #fff;
 }
-
 .e-logo--white {
   fill: #fff;
 }
 
 @-webkit-keyframes rotate {
   0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
 @keyframes rotate {
   0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
-
 .icon {
   height: 100%;
   width: 100%;
@@ -149,12 +136,10 @@ svg {
   height: 100%;
   display: block;
 }
-
 .e-link--lighter-text {
   color: white;
   padding: 11px;
 }
-
 .e-link--lighter-text:hover {
   border-radius: 5px;
   background-color: #000;
@@ -168,42 +153,28 @@ svg {
   width: 100%;
   height: 100px;
   background-color: #f25252;
+  z-index: 10;
 }
-
 .c-header__wrapper {
   height: 100%;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   max-width: 1200px;
   margin: 0 auto;
 }
-
 .c-header__logo {
   height: 75px;
   width: 150px;
   display: block;
 }
-
 .c-header__logo__wrapper {
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .c-navigation {
@@ -211,24 +182,52 @@ svg {
   max-width: 1200px;
   height: 50px;
 }
-
 .c-navigation__wrapper {
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
-
 .c-navigation__item {
   min-width: 70px;
   height: 40px;
   text-align: center;
   padding-left: 10px;
+}
+
+.section-establishment {
+  padding: 165px 0;
+}
+.section-establishment__wrapper {
+  font-family: "sen-regular";
+  max-width: 1300px;
+  display: flex;
+}
+.section-establishment__media {
+  border: 1px solid black;
+  background-color: white;
+  border-radius: 5px;
+  margin: 50px 0;
+  color: black;
+  padding: 15px;
+  z-index: 2;
+}
+.section-establishment__media-text {
+  padding: 20px 0 10px;
+}
+.section-establishment__meet {
+  padding: 85px 50px 85px 225px;
+  background-color: black;
+  margin-left: -175px;
+  border-radius: 5px;
+  color: white;
+  z-index: 1;
+}
+.section-establishment__meet-title {
+  font-family: "sen-bold";
+  font-size: 32px;
+}
+.section-establishment__meet-text {
+  padding-bottom: 10px;
 }
