--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -6,6 +6,7 @@
   width: 100%;
   height: 100px;
   background-color: $c-light-red;
+  z-index: 10;
   &__wrapper {
     height: 100%;
     width: 100%;
