--- a/src/_extends/common.pug
+++ b/src/_extends/common.pug
@@ -6,8 +6,12 @@ html(lang='en')
 	head
 		meta(charset='utf-8')
 		meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
-		link(rel='stylesheet' href='index.css')
+		//- Simptip tooltip
+		link(rel="stylesheet" type="text/css" href="./node_modules/simptip/simptip.css")
+		//- Favicon
 		link(rel="shortcut icon" href="" type="image/x-icon")
+		//- Main style
+		link(rel='stylesheet' href='index.css')
 		block style
 		block title
 			title Group project
