--- a/src/_includes/components/header.pug
+++ b/src/_includes/components/header.pug
@@ -7,7 +7,7 @@ mixin header()
           +logo({
             link: ' ./index.html',
             class: 'e-logo e-logo--white',
-            name: 'logo',
+            name: 'circle',
             text: 'e-logo__text' 
           })
       +navigation()
