--- a/about-us.css
+++ b/about-us.css
@@ -1,14 +1,12 @@
 @font-face {
   font-family: "sen-bold";
-  src: url("../assets/fonts/sen/Sen-Bold.woff2") format("woff2"),
-    url("../assets/fonts/sen/Sen-Bold.woff") format("woff");
+  src: url("../assets/fonts/sen/Sen-Bold.woff2") format("woff2"), url("../assets/fonts/sen/Sen-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
 }
 @font-face {
   font-family: "sen-regular";
-  src: url("../assets/fonts/sen/Sen-Regular.woff2") format("woff2"),
-    url("../assets/fonts/sen/Sen-Regular.woff") format("woff");
+  src: url("../assets/fonts/sen/Sen-Regular.woff2") format("woff2"), url("../assets/fonts/sen/Sen-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
@@ -74,7 +72,7 @@ body {
 }
 
 .wrapper {
-  max-width: 1200px;
+  max-width: 1300px;
   padding: 0 50px;
   margin: 0 auto;
   width: 100%;
@@ -97,6 +95,11 @@ svg {
 .e-logo {
   width: 75px;
   height: 75px;
+  display: block;
+  -webkit-animation: rotate 20s infinite linear;
+          animation: rotate 20s infinite linear;
+}
+.e-logo > svg {
   display: block;
 }
 .e-logo__text {
@@ -233,6 +236,85 @@ svg {
   padding-left: 10px;
 }
 
+.c-banner {
+  background-image: url("./assets/images/banner1.jpg");
+  background-size: cover;
+  background-position: center center;
+  margin-top: 100px;
+}
+.c-banner__wrapper {
+  max-width: 1300px;
+  padding: 0 50px;
+  margin: 0 auto;
+  width: 100%;
+}
+.c-banner__block {
+  width: 35%;
+}
+.c-banner__main-title {
+  font-family: "sen-bold";
+  font-size: 62px;
+  line-height: 1.3;
+  margin: 150px 0 20px;
+}
+.c-banner__sub-title {
+  font-family: "sen-regular";
+  font-size: 18px;
+  line-height: 1.5;
+  margin-bottom: 30px;
+}
+
+.section-advantages {
+  color: black;
+}
+.section-advantages__wrapper {
+  max-width: 1095px;
+  margin: 0px auto;
+}
+.section-advantages__header {
+  position: relative;
+  margin-bottom: 55px;
+}
+.section-advantages__title {
+  font-weight: bold;
+  line-height: 54px;
+  text-align: center;
+}
+.section-advantages__subtitle {
+  margin-top: 20px;
+  text-align: center;
+}
+.section-advantages__row {
+  flex-wrap: wrap;
+  justify-items: center;
+  display: flex;
+  margin: 0px 45px;
+}
+.section-advantages__column {
+  flex: 0 0 25%;
+  padding: 0 35px;
+  margin-bottom: 15px;
+}
+
+.item-advantages__icon {
+  margin-bottom: 15px;
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  fill: #f25252;
+}
+.item-advantages__title {
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+.item-advantages__text {
+  font-weight: 100;
+  font-size: 14px;
+  line-height: 26px;
+}
+
 .section-establishment {
   padding: 165px 0;
 }
@@ -269,45 +351,15 @@ svg {
   padding-bottom: 10px;
 }
 
-.c-banner {
-  background-image: url("./assets/images/banner1.jpg");
-  background-size: cover;
-  background-position: center center;
-  margin-top: 100px;
-}
-.c-banner__wrapper {
-  max-width: 1300px;
-  padding: 0 50px;
-  margin: 0 auto;
-  width: 100%;
-}
-.c-banner__block {
-  width: 35%;
-}
-.c-banner__main-title {
-  font-family: "sen-bold";
-  font-size: 62px;
-  line-height: 1.3;
-  margin: 150px 0 20px;
-}
-.c-banner__sub-title {
-  font-family: "sen-regular";
-  font-size: 18px;
-  line-height: 1.5;
-  margin-bottom: 30px;
-}
-
 @font-face {
   font-family: "sen-bold";
-  src: url("../assets/fonts/sen/Sen-Bold.woff2") format("woff2"),
-    url("../assets/fonts/sen/Sen-Bold.woff") format("woff");
+  src: url("../assets/fonts/sen/Sen-Bold.woff2") format("woff2"), url("../assets/fonts/sen/Sen-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
 }
 @font-face {
   font-family: "sen-regular";
-  src: url("../assets/fonts/sen/Sen-Regular.woff2") format("woff2"),
-    url("../assets/fonts/sen/Sen-Regular.woff") format("woff");
+  src: url("../assets/fonts/sen/Sen-Regular.woff2") format("woff2"), url("../assets/fonts/sen/Sen-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
@@ -373,7 +425,7 @@ body {
 }
 
 .wrapper {
-  max-width: 1200px;
+  max-width: 1300px;
   padding: 0 50px;
   margin: 0 auto;
   width: 100%;
@@ -398,7 +450,7 @@ svg {
   height: 75px;
   display: block;
   -webkit-animation: rotate 20s infinite linear;
-  animation: rotate 20s infinite linear;
+          animation: rotate 20s infinite linear;
 }
 .e-logo > svg {
   display: block;
@@ -528,6 +580,85 @@ svg {
   padding-left: 10px;
 }
 
+.c-banner {
+  background-image: url("./assets/images/banner1.jpg");
+  background-size: cover;
+  background-position: center center;
+  margin-top: 100px;
+}
+.c-banner__wrapper {
+  max-width: 1300px;
+  padding: 0 50px;
+  margin: 0 auto;
+  width: 100%;
+}
+.c-banner__block {
+  width: 35%;
+}
+.c-banner__main-title {
+  font-family: "sen-bold";
+  font-size: 62px;
+  line-height: 1.3;
+  margin: 150px 0 20px;
+}
+.c-banner__sub-title {
+  font-family: "sen-regular";
+  font-size: 18px;
+  line-height: 1.5;
+  margin-bottom: 30px;
+}
+
+.section-advantages {
+  color: black;
+}
+.section-advantages__wrapper {
+  max-width: 1095px;
+  margin: 0px auto;
+}
+.section-advantages__header {
+  position: relative;
+  margin-bottom: 55px;
+}
+.section-advantages__title {
+  font-weight: bold;
+  line-height: 54px;
+  text-align: center;
+}
+.section-advantages__subtitle {
+  margin-top: 20px;
+  text-align: center;
+}
+.section-advantages__row {
+  flex-wrap: wrap;
+  justify-items: center;
+  display: flex;
+  margin: 0px 45px;
+}
+.section-advantages__column {
+  flex: 0 0 25%;
+  padding: 0 35px;
+  margin-bottom: 15px;
+}
+
+.item-advantages__icon {
+  margin-bottom: 15px;
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  fill: #f25252;
+}
+.item-advantages__title {
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+.item-advantages__text {
+  font-weight: 100;
+  font-size: 14px;
+  line-height: 26px;
+}
+
 .section-establishment {
   padding: 165px 0;
 }
@@ -562,32 +693,4 @@ svg {
 }
 .section-establishment__meet-text {
   padding-bottom: 10px;
-}
-
-.c-banner {
-  background-image: url("./assets/images/banner1.jpg");
-  background-size: cover;
-  background-position: center center;
-  margin-top: 100px;
-}
-.c-banner__wrapper {
-  max-width: 1300px;
-  padding: 0 50px;
-  margin: 0 auto;
-  width: 100%;
-}
-.c-banner__block {
-  width: 35%;
-}
-.c-banner__main-title {
-  font-family: "sen-bold";
-  font-size: 62px;
-  line-height: 1.3;
-  margin: 150px 0 20px;
-}
-.c-banner__sub-title {
-  font-family: "sen-regular";
-  font-size: 18px;
-  line-height: 1.5;
-  margin-bottom: 30px;
 }
