--- a/index.css
+++ b/index.css
@@ -276,6 +276,7 @@ svg {
   margin-bottom: 55px;
 }
 .section-advantages__title {
+  margin-top: 30px;
   font-weight: bold;
   line-height: 54px;
   text-align: center;
@@ -299,8 +300,8 @@ svg {
 .item-advantages__icon {
   margin-bottom: 15px;
   display: inline-block;
-  width: 1em;
-  height: 1em;
+  width: 2.5em;
+  height: 2.5em;
   stroke-width: 0;
   fill: #f25252;
 }
