--- a/scss/components/_section-advantages.scss
+++ b/scss/components/_section-advantages.scss
@@ -12,6 +12,7 @@
   }
 
   &__title {
+    margin-top: 30px;
     font-weight: bold;
     line-height: 54px;
     text-align: center;
@@ -40,8 +41,8 @@
   &__icon {
     margin-bottom: 15px;
     display: inline-block;
-    width: 1em;
-    height: 1em;
+    width: 2.5em;
+    height: 2.5em;
     stroke-width: 0;
     fill: #f25252;
   }
