--- a/index.pug
+++ b/index.pug
@@ -5,5 +5,16 @@ block title
 
 block content
   +header()
-  +banner()
+  +banner({
+    style: `background-image: url('./assets/images/banner1.jpg')`,
+    alt: 'man on mountain',
+    infoHeader: 'Serving you since 1989.',
+    infoText: "Acme Outdoors is an outdoor and adventure shop located in the Boathouse District in Oklahoma City."
+  })
+  +banner({
+    style: `background-image: url('./assets/images/banner1.jpg')`,
+    alt: 'man on mountain',
+    infoHeader: 'Serving you since 1989.',
+    infoText: "Acme Outdoors is an outdoor and adventure shop located in the Boathouse District in Oklahoma City."
+  })
   +footer()
