--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -82,6 +82,10 @@ svg {
   height: 100%;
 }
 
+.l-common {
+  padding-top: 100px;
+}
+
 // TODO Bootstrap
 // @include media-breakpoint-down(sm) {
 //   width: 300px;
