--- a/about-us.css
+++ b/about-us.css
@@ -72,7 +72,7 @@ body {
 }
 
 .wrapper {
-  max-width: 1200px;
+  max-width: 1300px;
   padding: 0 50px;
   margin: 0 auto;
   width: 100%;
@@ -92,9 +92,18 @@ svg {
   height: 100%;
 }
 
+.l-common {
+  padding-top: 100px;
+}
+
 .e-logo {
   width: 75px;
   height: 75px;
+  display: block;
+  -webkit-animation: rotate 20s infinite linear;
+          animation: rotate 20s infinite linear;
+}
+.e-logo > svg {
   display: block;
 }
 .e-logo__text {
@@ -104,6 +113,28 @@ svg {
   fill: #fff;
 }
 
+@-webkit-keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.icon {
+  height: 100%;
+  width: 100%;
+}
+
 .e-link {
   width: 100%;
   height: 100%;
@@ -111,7 +142,7 @@ svg {
 }
 .e-link--lighter-text {
   color: white;
-  padding: 10px;
+  padding: 11px;
 }
 .e-link--lighter-text:hover {
   border-radius: 5px;
@@ -152,6 +183,7 @@ svg {
   width: 100%;
   height: 100px;
   background-color: #f25252;
+  z-index: 800;
 }
 .c-header__wrapper {
   height: 100%;
@@ -176,8 +208,9 @@ svg {
 }
 
 .c-footer {
-  min-height: 200px;
   background-color: #222222;
+  min-height: 200px;
+  min-width: 1920px;
 }
 .c-footer__wrapper {
   max-width: 1300px;
@@ -200,19 +233,18 @@ svg {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
 }
 .c-navigation__item {
   min-width: 70px;
   height: 40px;
   text-align: center;
+  padding-left: 10px;
 }
 
 .c-banner {
-  background-image: url("./assets/images/banner1.jpg");
   background-size: cover;
   background-position: center center;
-  margin-top: 100px;
+  min-height: 550px;
 }
 .c-banner__wrapper {
   max-width: 1300px;
@@ -220,16 +252,16 @@ svg {
   margin: 0 auto;
   width: 100%;
 }
-.c-banner__block {
+.c-banner__info {
   width: 35%;
 }
-.c-banner__main-title {
+.c-banner__info__main-title {
   font-family: "sen-bold";
   font-size: 62px;
   line-height: 1.3;
   margin: 150px 0 20px;
 }
-.c-banner__sub-title {
+.c-banner__info__sub-title {
   font-family: "sen-regular";
   font-size: 18px;
   line-height: 1.5;
@@ -310,7 +342,7 @@ body {
 }
 
 .wrapper {
-  max-width: 1200px;
+  max-width: 1300px;
   padding: 0 50px;
   margin: 0 auto;
   width: 100%;
@@ -330,9 +362,18 @@ svg {
   height: 100%;
 }
 
+.l-common {
+  padding-top: 100px;
+}
+
 .e-logo {
   width: 75px;
   height: 75px;
+  display: block;
+  -webkit-animation: rotate 20s infinite linear;
+          animation: rotate 20s infinite linear;
+}
+.e-logo > svg {
   display: block;
 }
 .e-logo__text {
@@ -342,6 +383,19 @@ svg {
   fill: #fff;
 }
 
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.icon {
+  height: 100%;
+  width: 100%;
+}
+
 .e-link {
   width: 100%;
   height: 100%;
@@ -349,7 +403,7 @@ svg {
 }
 .e-link--lighter-text {
   color: white;
-  padding: 10px;
+  padding: 11px;
 }
 .e-link--lighter-text:hover {
   border-radius: 5px;
@@ -390,6 +444,7 @@ svg {
   width: 100%;
   height: 100px;
   background-color: #f25252;
+  z-index: 800;
 }
 .c-header__wrapper {
   height: 100%;
@@ -414,8 +469,9 @@ svg {
 }
 
 .c-footer {
-  min-height: 200px;
   background-color: #222222;
+  min-height: 200px;
+  min-width: 1920px;
 }
 .c-footer__wrapper {
   max-width: 1300px;
@@ -438,19 +494,18 @@ svg {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
 }
 .c-navigation__item {
   min-width: 70px;
   height: 40px;
   text-align: center;
+  padding-left: 10px;
 }
 
 .c-banner {
-  background-image: url("./assets/images/banner1.jpg");
   background-size: cover;
   background-position: center center;
-  margin-top: 100px;
+  min-height: 550px;
 }
 .c-banner__wrapper {
   max-width: 1300px;
@@ -458,16 +513,16 @@ svg {
   margin: 0 auto;
   width: 100%;
 }
-.c-banner__block {
+.c-banner__info {
   width: 35%;
 }
-.c-banner__main-title {
+.c-banner__info__main-title {
   font-family: "sen-bold";
   font-size: 62px;
   line-height: 1.3;
   margin: 150px 0 20px;
 }
-.c-banner__sub-title {
+.c-banner__info__sub-title {
   font-family: "sen-regular";
   font-size: 18px;
   line-height: 1.5;
