--- a/src/_includes/components/banner.pug
+++ b/src/_includes/components/banner.pug
@@ -1,7 +1,19 @@
-mixin banner()
-  .c-banner
-    .c-banner__wrapper
-      .c-banner__block
-        h1.c-banner__main-title.d-inline-block Serving you since 1989.
-        h4.c-banner__sub-title Acme Outdoors is an outdoor and adventure shop located in the Boathouse District in Oklahoma City.
-        +button(args)
+mixin banner(args)
+  - let src = args.src ;
+  - let alt = args.alt ;
+  - let infoClass = args.infoClass ;
+  - let infoHeader = args.infoHeader;
+  - let infoText = args.infoText;
+  - let style = args.style;
+
+  .c-banner(style=style)
+    .c-banner__wrapper.d-flex
+      .c-banner__info
+        h2(class="c-banner__info__main-title d-inline-block"+ infoClass)=infoHeader
+        h4(class="c-banner__info__sub-title d-inline-block"+ infoClass)=infoText
+          +link({
+            href: './index.html',
+            lightText: true,
+            button: false,
+            text: 'Shop Merch',
+          })
