--- a/scss/elements/_link.scss
+++ b/scss/elements/_link.scss
@@ -1,7 +1,6 @@
 .e-link {
-  width: 100%;
-  height: 100%;
-  display: block;
+  display: inline-block;
+  width: fit-content;
 
   &--lighter-text {
     color: white;
