--- a/about-us.css
+++ b/about-us.css
@@ -136,9 +136,10 @@ svg {
 }
 
 .e-link {
-  width: 100%;
-  height: 100%;
-  display: block;
+  display: inline-block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 .e-link--lighter-text {
   color: white;
@@ -245,6 +246,7 @@ svg {
   background-size: cover;
   background-position: center center;
   min-height: 550px;
+  padding: 100px 0;
 }
 .c-banner__wrapper {
   max-width: 1300px;
@@ -253,19 +255,29 @@ svg {
   width: 100%;
 }
 .c-banner__info {
-  width: 35%;
+  max-width: 420px;
+  width: 100%;
 }
 .c-banner__info__main-title {
   font-family: "sen-bold";
   font-size: 62px;
   line-height: 1.3;
-  margin: 150px 0 20px;
+  margin: 0 0 20px;
 }
 .c-banner__info__sub-title {
   font-family: "sen-regular";
   font-size: 18px;
   line-height: 1.5;
   margin-bottom: 30px;
+}
+.c-banner .more-width .c-banner__info {
+  max-width: 550px;
+}
+.c-banner .more-width .c-banner__info__main-title {
+  font-size: 45px;
+}
+.c-banner .more-width .c-banner__info__sub-title {
+  max-width: 420px;
 }
 
 @font-face {
@@ -397,9 +409,10 @@ svg {
 }
 
 .e-link {
-  width: 100%;
-  height: 100%;
-  display: block;
+  display: inline-block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 .e-link--lighter-text {
   color: white;
@@ -506,6 +519,7 @@ svg {
   background-size: cover;
   background-position: center center;
   min-height: 550px;
+  padding: 100px 0;
 }
 .c-banner__wrapper {
   max-width: 1300px;
@@ -514,17 +528,27 @@ svg {
   width: 100%;
 }
 .c-banner__info {
-  width: 35%;
+  max-width: 420px;
+  width: 100%;
 }
 .c-banner__info__main-title {
   font-family: "sen-bold";
   font-size: 62px;
   line-height: 1.3;
-  margin: 150px 0 20px;
+  margin: 0 0 20px;
 }
 .c-banner__info__sub-title {
   font-family: "sen-regular";
   font-size: 18px;
   line-height: 1.5;
   margin-bottom: 30px;
+}
+.c-banner .more-width .c-banner__info {
+  max-width: 550px;
+}
+.c-banner .more-width .c-banner__info__main-title {
+  font-size: 45px;
+}
+.c-banner .more-width .c-banner__info__sub-title {
+  max-width: 420px;
 }
