--- a/index.pug
+++ b/index.pug
@@ -12,9 +12,10 @@ block content
     infoText: "Acme Outdoors is an outdoor and adventure shop located in the Boathouse District in Oklahoma City."
   })
   +banner({
-    style: `background-image: url('./assets/images/banner1.jpg')`,
-    alt: 'man on mountain',
-    infoHeader: 'Serving you since 1989.',
-    infoText: "Acme Outdoors is an outdoor and adventure shop located in the Boathouse District in Oklahoma City."
+    style: `background-image: url('./assets/images/banner2.jpg')`,
+    alt: 'man on mountain and tree',
+    infoHeader: 'How we are keeping you safe during COVID-19',
+    infoClass: ' more-width justify-content-end text-end',
+    infoText: "As an outdoor shop, we’ve taken precautionary measures to ensure the safety of all our customers and team members."
   })
   +footer()
