--- a/src/_includes/components/banner.pug
+++ b/src/_includes/components/banner.pug
@@ -1,19 +1,19 @@
 mixin banner(args)
-  - let src = args.src ;
-  - let alt = args.alt ;
-  - let infoClass = args.infoClass ;
   - let infoHeader = args.infoHeader;
+  - let infoClass = args.infoClass ;
   - let infoText = args.infoText;
   - let style = args.style;
+  - let src = args.src ;
+  - let alt = args.alt ;
 
-  .c-banner(style=style)
-    .c-banner__wrapper.d-flex
+  .c-banner(style=style, alt=alt)
+    div(class="c-banner__wrapper d-flex" + infoClass)
       .c-banner__info
-        h2(class="c-banner__info__main-title d-inline-block"+ infoClass)=infoHeader
-        h4(class="c-banner__info__sub-title d-inline-block"+ infoClass)=infoText
-          +link({
-            href: './index.html',
-            lightText: true,
-            button: false,
-            text: 'Shop Merch',
-          })
+        h2.c-banner__info__main-title.d-inline-block=infoHeader
+        h4.c-banner__info__sub-title.d-inline-block=infoText
+        +link({
+          href: './index.html',
+          lightText: true,
+          button: false,
+          text: 'Read Our Statement',
+        })
