--- a/src/_includes/elements/logo.pug
+++ b/src/_includes/elements/logo.pug
@@ -9,4 +9,4 @@ mixin logo(args)
         use(xlink:href="#icon-" + svgName)
 
     a(href=logoLink class=logoText)
-      span Beetrooters 
+      span BEETROOTERS 
