--- a/about-us.css
+++ b/about-us.css
@@ -208,6 +208,7 @@ svg {
   border: 1px solid black;
   background-color: white;
   border-radius: 5px;
+  max-width: 600px;
   margin: 50px 0;
   color: black;
   padding: 15px;
@@ -433,6 +434,7 @@ svg {
   border: 1px solid black;
   background-color: white;
   border-radius: 5px;
+  max-width: 600px;
   margin: 50px 0;
   color: black;
   padding: 15px;
