--- a/scss/components/_section-establishment.scss
+++ b/scss/components/_section-establishment.scss
@@ -11,6 +11,7 @@
     border: 1px solid black;
     background-color: white;
     border-radius: 5px;
+    max-width: 600px;
     margin: 50px 0;
     color: black;
     padding: 15px;
