--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,8 +9,8 @@ $c-white: #fff;
 $c-black: #000;
 
 // Fonts
-$f-helvetica: "", sans-serif;
-$f-avenir: "", sans-serif;
+$f-sen-bold: "Sen-Bold", sans-serif;
+$f-sen-regular: "Sen-Regular", sans-serif;
 
 // Font size
 $fs-soc-icon: 30;
