--- a/scss/components/_banner.scss
+++ b/scss/components/_banner.scss
@@ -1,7 +1,7 @@
 .c-banner {
-  background-image: url('./assets/images/banner1.jpg');
+  background-image: url("./assets/images/banner1.jpg");
   @include backgroundCoverCenter;
-  margin-top: 100px;
+  margin-top: 75px;
 
   &__wrapper {
     @include containerGlobal;
@@ -12,14 +12,14 @@
   }
 
   &__main-title {
-    font-family: "sen-bold";
+    font-family: "Sen-Bold";
     font-size: $fs-h1 + px;
     line-height: $lh-base;
     margin: 150px 0 20px;
   }
 
   &__sub-title {
-    font-family: "sen-regular";
+    font-family: "Sen-Regular";
     font-size: $fs-sub + px;
     line-height: $lh-big;
     margin-bottom: 30px;
