--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -4,22 +4,21 @@
   left: 0;
   right: 0;
   width: 100%;
-  height: 100px;
+  height: 75px;
   background-color: $c-light-red;
   z-index: 10;
+
   &__wrapper {
     height: 100%;
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    max-width: 1200px;
     margin: 0 auto;
   }
 
   &__logo {
-    height: 75px;
-    width: 150px;
+    height: 100%;
     display: block;
 
     &__wrapper {
