--- a/scss/elements/_link.scss
+++ b/scss/elements/_link.scss
@@ -2,14 +2,17 @@
   width: 100%;
   height: 100%;
   display: block;
+  transition: $t-normal;
 
   &--lighter-text {
     color: white;
-    padding: 11px;
+    padding: 5px 12px;
 
     &:hover {
       border-radius: 5px;
-      background-color: $c-black;
+      background-color: $c-darker-grey;
+      color: $c-white;
+      transition: $t-normal;
     }
   }
 }
