--- a/index.css
+++ b/index.css
@@ -232,3 +232,56 @@ svg {
   text-align: center;
   padding-left: 10px;
 }
+
+.section-recommendation {
+  padding: 165px 0;
+}
+
+.section-recommendation__wrapper {
+  font-family: "sen-regular";
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.section-recommendation__clrecphoto {
+  margin: 20px 0;
+  z-index: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 30%;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  border-radius: 10px;
+}
+
+.section-recommendation__clrecmain {
+  padding: 85px 50px 85px 225px;
+  margin-left: -115px;
+  z-index: 1;
+  width: 80%;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  border-radius: 10px;
+  background-color: black;
+  color: white;
+}
+
+.section-recommendation__clrecname {
+  font-family: "sen-bold";
+  size: 28px;
+}
+
+.section-recommendation__clrecprdt {
+  font-family: "sen-regular";
+  size: 8px;
+  color: gray;
+}
+
+.section-recommendation__clrectext {
+  font-family: "sen-regular";
+  size: 11px;
+}
