--- a/src/_includes/components/header.pug
+++ b/src/_includes/components/header.pug
@@ -5,6 +5,7 @@ mixin header()
       .c-header__logo
         .c-header__logo__wrapper                                
           +logo({
+            whiteMode: true,
             link: './index.html',
             class: 'e-logo e-logo--white',
             name: 'logo',
