--- a/src/_includes/elements/logo.pug
+++ b/src/_includes/elements/logo.pug
@@ -1,12 +1,9 @@
 mixin logo(args)
-  - let logoLink = args.link || 'icon-logo';
-  - let logoClass = args.class || 'icon';
-  - let svgName = args.name || 'default';
-  - let logoText = args.text || 'default'
+  - let whiteMode = args.whiteMode || false;
 
-    a(href=logoLink class=logoClass)
-      svg(class="icon-" + svgName)
-        use(xlink:href="#icon-" + svgName)
 
-    a(href=logoLink class=logoText)
-      span Beetrooters 
+    a(href='./index.html').e-logo
+      .e-logo__wrapper
+        svg(class="icon icon-logo").e-logo__svg
+          use(xlink:href="#icon-logo")
+        span.e-logo__text Beetrooters
