--- a/index.pug
+++ b/index.pug
@@ -6,6 +6,6 @@ block title
 block content
   +header()
   +section-contact-us()
-  +banner()
+  //- +banner()
   +section-establishment()
   +footer()
