--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -2,6 +2,7 @@
   width: 100%;
   max-width: 1200px;
   height: 50px;
+  
   &__wrapper {
     width: 100%;
     height: 100%;
@@ -9,9 +10,16 @@
     justify-content: center;
     align-items: center;
   }
+
+  &__list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   &__item {
     min-width: 70px;
-    height: 40px;
+    height: 100%;
     text-align: center;
     padding-left: 10px;
   }
