Added loading page

--- a/index.pug
+++ b/index.pug
@@ -3,6 +3,18 @@ extends ./src/_extends/common
 block title 
   title Home
 
+block style 
+  style(type="text/css").
+    #page {
+      display: none
+    }
+    #loading {
+      display: block
+    }
+
+block loading 
+  +loading()
+
 block content
   +header()
   +banner()
