testing new banner

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -85,6 +85,10 @@ svg {
   height: 100%;
 }
 
+.l-common{
+  padding-top: 75px;
+}
+
 // TODO Bootstrap
 // @include media-breakpoint-down(sm) {
 //   width: 300px;
