--- a/src/_includes/components/footer.pug
+++ b/src/_includes/components/footer.pug
@@ -2,13 +2,10 @@ mixin footer()
   .c-footer
     .c-footer__wrapper
       .c-footer__top.d-flex.justify-content-between
-        .logo
-          .logo__wrapper.d-flex.align-items-center
+        .c-footer__logo
+          .c-footer__logo__wrapper.d-flex.align-items-center
             +logo({
-              link: ' ./index.html',
-              class: 'e-logo e-logo--white',
-              name: 'logo',
-              text: 'e-logo__text' 
+              whiteMode: ''
             })
         .social-link
           +social-link({href:"https://twitter.com/?lang=ru", icon: "fa-twitter", target: "_blank"})
