--- a/index.css
+++ b/index.css
@@ -99,6 +99,10 @@ svg {
   height: 100%;
 }
 
+.l-common {
+  padding-top: 75px;
+}
+
 .e-logo {
   width: 100%;
   height: 100%;
@@ -231,6 +235,16 @@ svg {
   padding: 0 50px;
   margin: 0 auto;
   width: 100%;
+}
+
+.c-footer__logo {
+  width: 150px;
+  height: 75px;
+}
+
+.c-footer__logo__wrapper {
+  width: 100%;
+  height: 100%;
 }
 
 .c-footer__top {
