--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -5,7 +5,15 @@
   &__wrapper {
     @include containerGlobal;
   }
+  &__logo{
+    width: 150px;
+    height: 75px;
 
+    &__wrapper{
+      width: 100%;
+      height: 100%;
+    }
+  }
   &__top {
     padding-top: 25px;
   }
